# M-moire

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
agents/: __init__.py  arxiv_agent.py  base.py  crawler_agent.py  curator_agent.py  orchestrator.py  researcher_agent.py  tagger_agent.py
api/: __init__.py  main.py
api/routes/: agents.py  memory.py
config/: __init__.py  agents.yaml  settings.py  templates.yaml  topics.yaml
scheduler/: __init__.py  cron_jobs.py  run_scheduler.py
scripts/: check_llm.py  init_vault.py  migrate.py  setup.sh
skills/: __init__.py  arxiv_fetcher.py  note_writer.py  pdf_processor.py  summarizer.py  vector_memory.py  web_crawler.py  web_search.py  youtube_transcriber.py
tests/: conftest.py  test_agents.py  test_memory.py  test_skills.py
vault/.obsidian/: app.json  community-plugins.json
vault/.obsidian/plugins/dataview/: data.json
vault/06_Templates/: Agent_Log.md  Atomic_Note.md  Inbox_Capture.md  MOC_Template.md  Paper_Note.md
