[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "second-brain"
version = "0.1.0"
description = "Autonomous AI Second Brain combining Obsidian, ChromaDB, and local LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Second Brain Project" }]
keywords = ["obsidian", "rag", "agents", "chromadb", "lmstudio", "local-llm", "knowledge-management"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["dependencies"]

[project.scripts]
second-brain = "agents.orchestrator:main"
second-brain-daemon = "scheduler.run_scheduler:main"
second-brain-api = "api.main:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "skills*", "scheduler*", "api*", "config*"]
exclude = ["tests*", "vault*", "memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"
